src/test/success/assignment_operators.egern
var a = 0
print(a)
a += 3
print(a)
a -= 1 - 3
print(a)
a *= 2
print(a)
a /= 2 * 3 - 1
print(a)
a += 1
a %= 2
print(a)
