src/test/fail/missing_closing_brace_fail.egern
func callme(n: int): int {
    return n

var a = 3
print(callme(3))
